Added new method to return all valid language pairs as a string

--- a/Apertium.Net/Apertium.Net/Apertium.Net.csproj
+++ b/Apertium.Net/Apertium.Net/Apertium.Net.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>Apertium.Net</AssemblyName>
     <RootNamespace>Apertium.Net</RootNamespace>
     <PackageProjectUrl>https://github.com/vonderborch/Apertium.Net</PackageProjectUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
